specify the type of data

--- a/doc/engine.pod
+++ b/doc/engine.pod
@@ -111,19 +111,19 @@ B<%opts> - constructor options
 
 =item *
 
-B<mod_inc> - list of module search directories
+B<\@mod_inc> - list of module search directories
 
 =item *
 
-B<features> - I<optional>, list of feature names to enable immediately
+B<\@features> - I<optional>, list of feature names to enable immediately
 
 =item *
 
-B<modules> - I<optional>, list of names of toplevel modules to load immediately
+B<\@modules> - I<optional>, list of names of toplevel modules to load immediately
 
 =item *
 
-B<log_sub> - I<optional>, code to be called for API Engine log messages
+B<\&log_sub> - I<optional>, code to be called for API Engine log messages
 
 =back
 
@@ -140,7 +140,7 @@ B<Parameters>
 
 =item *
 
-B<mod_names> - list of module names to load
+B<@mod_names> - list of module names to load
 
 =back
 
@@ -152,11 +152,11 @@ Module objects for those which loaded successfully.
 
 =item *
 
-B<mod_name> - name of the module to load.
+B<$mod_name> - name of the module to load.
 
 =item *
 
-B<dirs> - I<optional>, module search directories. if omitted, the normal search
+B<\@dirs> - I<optional>, module search directories. if omitted, the normal search
 directories specified at API Engine construction time will be used.
 
 =back
@@ -175,17 +175,17 @@ B<Parameters>
 
 =item *
 
-B<mod> - module object or name to unload.
+B<$mod> - module object or name to unload.
 
 =item *
 
-B<unload_dependents> - I<optional>, if true, modules dependent on the one
+B<$unload_dependents> - I<optional>, if true, modules dependent on the one
 being unloaded will also be unloaded. the normal behavior is to refuse to unload
 if dependent modules are loaded.
 
 =item *
 
-B<unload_parent> - I<optional>, if true and the module being unloaded is a
+B<$unload_parent> - I<optional>, if true and the module being unloaded is a
 submodule, its parent will also be unloaded. the normal behavior is to refuse to
 unload if the requested module is a submodule.
 
@@ -224,7 +224,7 @@ B<Parameters>
 
 =item *
 
-B<mod> - module object or name to reload.
+B<$mod> - module object or name to reload.
 
 =back
 
@@ -242,7 +242,7 @@ B<Parameters>
 
 =item *
 
-B<mods> - module objects or names to reload.
+B<@mods> - module objects or names to reload.
 
 =back
 
@@ -260,7 +260,7 @@ B<Parameters>
 
 =item *
 
-B<mod_name> - name of the module to find.
+B<$mod_name> - name of the module to find.
 
 =back
 
@@ -278,7 +278,7 @@ B<Parameters>
 
 =item *
 
-B<pkg> - Perl package name to find.
+B<$pkg> - Perl package name to find.
 
 =back
 
@@ -296,7 +296,7 @@ B<Parameters>
 
 =item *
 
-B<mod_name> - name of the module to find.
+B<$mod_name> - name of the module to find.
 
 =back
 
@@ -314,7 +314,7 @@ B<Parameters>
 
 =item *
 
-B<key> - name for fetching data later.
+B<$key> - name for fetching data later.
 
 =item *
 
@@ -332,7 +332,7 @@ B<Parameters>
 
 =item *
 
-B<key> - name associated with data to fetch.
+B<$key> - name associated with data to fetch.
 
 =back
 
@@ -388,7 +388,7 @@ B<Parameters>
 
 =item *
 
-B<feature> - name of the feature to enable.
+B<$feature> - name of the feature to enable.
 
 =back
 
@@ -404,7 +404,7 @@ B<Parameters>
 
 =item *
 
-B<feature> - name of the feature to disable.
+B<$feature> - name of the feature to disable.
 
 =back
 
@@ -420,7 +420,7 @@ B<Parameters>
 
 =item *
 
-B<feature> - name of the feature to find.
+B<$feature> - name of the feature to find.
 
 =back
 
@@ -439,7 +439,7 @@ B<Parameters>
 
 =item *
 
-B<msg> - text to log.
+B<$msg> - text to log.
 
 =back
 
