module docs in the making

--- a/doc/engine.pod
+++ b/doc/engine.pod
@@ -125,6 +125,12 @@ B<\@modules> - I<optional>, list of names of toplevel modules to load immediatel
 
 B<\&log_sub> - I<optional>, code to be called for API Engine log messages
 
+=item *
+
+B<$developer> - I<optional>, if true, module info will be written to JSON
+metadata files. your program should include a developer mode option which in
+turn enables this.
+
 =back
 
 =head2 $api->load_modules(@mod_names)
@@ -318,7 +324,7 @@ B<$key> - name for fetching data later.
 
 =item *
 
-B<value> - value to store.
+B<$value> - value to store.
 
 =back
 
@@ -348,11 +354,11 @@ Adds an entry to a list of data associated with the API Engine.
 
 =item *
 
-B<key> - name for fetching data later.
+B<$key> - name for fetching data later.
 
 =item *
 
-B<value> - value to add.
+B<$value> - value to add.
 
 =back
 
@@ -364,7 +370,7 @@ Fetches all values in a list associated with the API Engine.
 
 =item *
 
-B<key> - name of the list to retrieve.
+B<$key> - name of the list to retrieve.
 
 =back
 
