--- a/doc/module.pod
+++ b/doc/module.pod
@@ -174,6 +174,22 @@ B<$msg> - text to log.
 
 =back
 
+=head2 $mod->Debug($msg)
+
+Used for debug logging associated with module.
+Use L<API Engine | Evented:API::Engine> C<< ->Debug() >> for messages not
+associated with a specific module.
+
+B<Parameters>
+
+=over
+
+=item *
+
+B<$msg> - text to log.
+
+=back
+
 =head2 $mod->get_symbol($sym)
 
 Fetches the value of a symbol in module's main package.
